@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1.70
-Date: 2008-02-22
+Date: 2008-02-23
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
