@@ -13,25 +13,27 @@ ctd.trim(x, method="downcast",parameters=NULL, verbose=FALSE)
     \item{"downcast"}{Select only data for which the CTD is descending.  This
       is done in stages.
 
-1. The pressure data are despiked with
-      a smooth() filter with method "3R".  This removes wild spikes that
-      arise from poor instrument connections, etc.
+      1. The pressure data are despiked with a smooth() filter with
+      method "3R".  This removes wild spikes that arise from poor
+      instrument connections, etc.
 
-2 Any data with negative pressures are deleted.  This removes in-air data.
+      2. Any data with negative pressures are deleted.  This removes
+      in-air data.
 
-3. The maximum pressure is determined, and data acquired
-subsequent to that point are deleted.  This removes the upcast and
-any subsequent data.
+      3. The maximum pressure is determined, and data acquired
+      subsequent to that point are deleted.  This removes the upcast and
+      any subsequent data.
 
-4. At this stage, most datasets consist only of the actual
+      4. At this stage, most datasets consist only of the actual
       downcast, plus an initial period of equilibration during which
-      pressure is nearly constant.  Trimming this equilibration period
-      is surprisingly difficult, and is done in two stages.  First, 
-      the first-difference of pressure is computed, along with its
+      pressure is small.  For detailed work, it makes sense to use
+      \code{\link{plot.ctd.scan}} to Trimming this equilibration period is
+      surprisingly difficult, and is done in two stages.  First, the
+      first-difference of pressure is computed, along with its
       confidence interval.  (By default, the 0.95 confidence level is
-      used but \code{parameters[1]} will be used if provided.)
-      Points are removed if their first difference in pressure
-      is less than this lower limit.
+      used but \code{parameters[1]} will be used if provided.)  Points
+      are removed if their first difference in pressure is less than
+      this lower limit.
 
 5. This often leaves a handful
       of equilibration points that just happened to be falling through
@@ -40,7 +42,9 @@ any subsequent data.
       pressure against scan number, and the scan number at which
       the regression passes through zero pressure is noted.  Points
       measured before this scan number are deleted.  
+
 	}
+
     \item{"index"}{Select values only in indicated list of indices,
       \emph{e.g.} \code{selection <- ctd.trim(ctd, "index", seq(10,30))}
       selects data points 10, 11, ... 30.}
@@ -58,20 +62,21 @@ any subsequent data.
   \item{verbose}{If set to TRUE, some debugging information is provided.}
 }
 \details{
-  For a quick look at the data, the \code{method="downcast"} scheme
-  is normally quite adequate.  However, a wise user will seek
-  want to exert more control over the trimming process.  Visual
-  inspection is a good way to do this, using \code{plot.ctd.scan()} together
-  with \code{ctd.trim}.  Normally, this involves
-  identifying by eye an initial period 
-  in which the CTD is in the air or unequilibrated in the water, 
-  and a final period in which the CTD is no longer descending.  
-  Quite often this final period is easier to find by eye than
-  with the \code{downcast} method, since the instrument 
-  operator may leave the device in deep water for some extra
-  time to fire off a water bottle, etc., yielding problematic
-  CTD data (but with some wonderful chemical or biological
-  samples).
+
+  For normal CTD profiling, the goal is to isolate only the downcast,
+  discarding measurements made in the air, in an equilibration phase in
+  which the device is held below the water surface, and then the upcast
+  phase that follows the downcast.  This is handled reasonably well by
+  \code{ctd.trim} with \code{method="downcast"}.  (The datasets provided
+  with \code{oce} were produced this way.)
+
+  However, for detailed work it makes sense to do things semi-manually.
+  The eye is simply better at handling exceptional cases.  The process
+  is simple: use \code{plot.ctd.scan()} to get an idea of the scan
+  indices of the downacast, and then use \code{ctd.trim} with
+  \code{method="index"}.  A few trials will normally identify the
+  downcast very well.
+
 }
 
 \value{An object of \code{\link[base]{class}} \code{"ctd"}, with data having been trimmed in some way.}
