@@ -1,4 +1,5 @@
 0.1.70
+	- make read.ctd() handle cases with no cruise information, and with no scan column
 	- permit setting xlab and ylab in plot.TS()
 	- make processing log timestamps be in GMT
 	- add as.windrose() and plot.windrose()
